<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_game"
    android:fitsSystemWindows="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="321dp"
        android:layout_height="264dp"
        android:layout_marginBottom="43dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="0.886">

        <ImageView
            android:id="@+id/btnStats"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:clickable="true"
            android:contentDescription="@string/statistics"
            android:focusable="true"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnSettings"
            app:layout_constraintHorizontal_bias="0.131"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.782"
            app:srcCompat="@drawable/ic_stats" />

        <ImageView
            android:id="@+id/btnSettings"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:clickable="true"
            android:contentDescription="@string/preferencer"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.871"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.782"
            app:srcCompat="@drawable/ic_settings"
            android:focusable="true" />

        <ImageView
            android:id="@+id/btnPlay"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="100dp"
            android:clickable="true"
            android:contentDescription="@string/play"

            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_play" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="339dp"
        android:layout_height="327dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="177dp"
            android:layout_height="0dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="33dp"
            android:contentDescription="@string/logo"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.13999999"
            app:srcCompat="@drawable/figure" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:fontFamily="@font/lobster"
            android:text="@string/producer"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="12sp"
            android:textStyle="bold"
            android:typeface="monospace"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.78" />

        <TextView

            android:id="@+id/textView"
            android:layout_width="186dp"
            android:layout_height="52dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:fontFamily="@font/aldrich"
            android:shadowColor="@color/TransparentGrey"
            android:shadowDx="-1"
            android:shadowDy="-1"
            android:shadowRadius="1"
            android:text="@string/gametitle1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="45sp"
            android:textStyle="bold"
            android:typeface="monospace"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toStartOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.125" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="222dp"
            android:layout_height="96dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="61dp"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/aldrich"
            android:shadowColor="@color/TransparentGrey"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="6"
            android:text="@string/gametitle2"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#2196F3"
            android:textSize="60sp"
            android:textStyle="bold"
            android:typeface="monospace"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Layout for content is here. This can be a RelativeLayout  -->

</androidx.constraintlayout.widget.ConstraintLayout>