<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="1dp"
    android:layout_marginStart="1dp"
    android:layout_marginLeft="1dp"
    android:layout_marginTop="1dp"
    android:layout_marginEnd="1dp"
    android:layout_marginRight="1dp"
    android:layout_marginBottom="1dp"
    android:orientation="vertical"
    tools:context=".fragments.CalculationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#BA800040"
            android:ems="10"
            android:focusableInTouchMode="false"
            android:inputType="number"
            android:maxLength="2"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="30sp"
            android:visibility="invisible" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/number1"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/aldrich"
            android:shadowColor="@color/TransparentGrey"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="16"
            android:text="@string/num1"
            android:textColor="@android:color/background_light"
            android:textSize="30sp" />

        <Button
            android:id="@+id/number2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/aldrich"
            android:shadowColor="@color/TransparentGrey"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="16"
            android:text="@string/num2"
            android:textColor="@android:color/background_light"
            android:textSize="30sp" />

        <Button
            android:id="@+id/number3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/aldrich"
            android:shadowColor="@color/TransparentGrey"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="16"
            android:text="@string/num3"
            android:textColor="@android:color/background_light"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/number4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/aldrich"
            android:shadowColor="@color/TransparentGrey"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="16"
            android:text="@string/num4"
            android:textColor="@android:color/background_light"
            android:textSize="30sp" />

        <Button
            android:id="@+id/number5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/aldrich"
            android:shadowColor="@color/TransparentGrey"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="16"
            android:text="@string/num5"
            android:textColor="@android:color/background_light"
            android:textSize="30sp" />

        <Button
            android:id="@+id/number6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/aldrich"
            android:shadowColor="@color/TransparentGrey"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="16"
            android:text="@string/num6"
            android:textColor="@android:color/background_light"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/number7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/aldrich"
            android:shadowColor="@color/TransparentGrey"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="16"
            android:text="@string/num7"
            android:textColor="@android:color/background_light"
            android:textSize="30sp" />

        <Button
            android:id="@+id/number8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/aldrich"
            android:shadowColor="@color/TransparentGrey"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="16"
            android:text="@string/num8"
            android:textColor="@android:color/background_light"
            android:textSize="30sp" />

        <Button
            android:id="@+id/number9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/aldrich"
            android:shadowColor="@color/TransparentGrey"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="16"
            android:text="@string/num9"
            android:textColor="@android:color/background_light"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@color/colorKeyboard"
            android:foreground="@drawable/ic_action_name"
            android:foregroundGravity="center_vertical|center_horizontal"
            android:shadowColor="@color/TransparentGrey"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="16"
            android:textSize="30sp" />

        <Button
            android:id="@+id/number0"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/aldrich"
            android:shadowColor="@color/TransparentGrey"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="16"
            android:text="@string/num0"
            android:textColor="@android:color/background_light"
            android:textSize="30sp" />

        <Button
            android:id="@+id/remove"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@color/colorKeyboard"
            android:foreground="@drawable/ic_remove"
            android:foregroundGravity="center_vertical|center_horizontal"
            android:shadowColor="@color/TransparentGrey"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="16"
            android:textColor="@android:color/background_light"
            android:textSize="30sp" />

    </LinearLayout>

</LinearLayout>
